manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-server
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: file-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: file-server
    spec:
      containers:
        - name: file-server
          image: ghcr.io/zoomoid/go-autoindex:0.1.1
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - name: files
              mountPath: /var/www
      volumes:
        - name: files
          hostPath:
            path: /media/file-server/
