manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: file-server
  labels:
    app.kubernetes.io/name: file-server
spec:
  selector:
    app.kubernetes.io/name: file-server
  ports:
    - port: 80
      name: http
      targetPort: 8080
